--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,13 @@ h1#app-title.logo {
 	font-size: 2.6rem;
 }
 
+header#app-header {
+	width: 100%;
+	padding: 1rem;
+	background-color: var(--white);
+	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
+}
+
 @media (min-width: 400px) {
 	h1#app-title.logo {
 		font-size: 3rem;
