--- a/styles/common/button.css
+++ b/styles/common/button.css
@@ -3,15 +3,21 @@ button {
 	max-width: 400px;
 	height: 40px;
 	border-radius: 5px;
-	border: none;
+	padding: 0 1rem;
+	border: 1px solid transparent;
 	font-size: 1rem;
 	color: var(--black);
 	background-color: var(--primary);
 	box-shadow: 0 1px 6px 2px rgba(0, 0, 0, 0.1);
 }
 
-button:hover {
+button:hover,
+button:focus-visible {
 	filter: brightness(0.9);
 	border: 1px solid var(--quaternary);
 	cursor: pointer;
+}
+
+button.rounded {
+	border-radius: 50px;
 }
