--- a/styles/style.css
+++ b/styles/style.css
@@ -23,9 +23,14 @@ body {
 	font-family: "Roboto", sans-serif;
 	color: var(--black);
 	background-color: var(--theme);
+	display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 main {
+	width: 100%;
+	max-width: 800px;
 	padding: 2rem 2rem 5rem;
 }
 
